@@ -256,23 +256,25 @@ public class Version20ModelBuilder extends AbstractModelBuilder
    */
   public static File getControllerDefinitionFile(ControllerConfiguration config)
   {
-
-    // TODO :
-    //   should review -- most likely we always want an absolute path, the URI resolution
-    //   still looks problematic
-    //                                                                              [JPL]
-
     try
     {
       URI uri = new URI(config.getResourcePath());
 
+      log.trace(
+          "Converted controller definition file location from URI ''{0}''",
+          uri.resolve(CONTROLLER_XML)
+      );
+
       return new File(uri.resolve(CONTROLLER_XML));
     }
+
     catch (Throwable t)
     {
       // legacy...
 
       String xmlPath = PathUtil.addSlashSuffix(config.getResourcePath()) + CONTROLLER_XML;
+
+      log.trace("Applied legacy resource path conversion to non-compatible URI ''{0}''", xmlPath);
 
       return new File(xmlPath);
     }
@@ -561,12 +563,22 @@ public class Version20ModelBuilder extends AbstractModelBuilder
    * located with JAXP API (via JDOM library). By default the document instance is validated
    * with XML schema.
    *
-   * @return a built document for controller.xml
+   * @throws ControllerDefinitionNotFoundException
+   *            if {@link #CONTROLLER_XML} cannot be found in the location specified by
+   *            {@link ControllerConfiguration#setResourcePath(String)}.
+   *
+   * @throws XMLParsingException
+   *            if the {@link #CONTROLLER_XML} cannot be parsed for any reason
+   *
+   * @throws InitializationException
+   *            if {@link #CONTROLLER_XML} cannot be accessed for any reason or any other
+   *            initialization error occurs
+   *
+   * @return a built JDOM document model for controller.xml
    */
   @Override protected Document readControllerXMLDocument() throws InitializationException
   {
     SAXBuilder builder = new SAXBuilder();
-    String xsdPath = CONTROLLER_XSD_PATH;
 
     File controllerXMLFile = getControllerDefinitionFile(config);
 
@@ -586,13 +598,15 @@ public class Version20ModelBuilder extends AbstractModelBuilder
     }
 
 
+    String xsdPath = CONTROLLER_XSD_PATH;
+
     try
     {
-      URL xsdResource = Version20ModelBuilder.class.getResource(xsdPath);
+      URL xsdResource = Version20ModelBuilder.class.getResource(CONTROLLER_XSD_PATH);
 
       if (xsdResource == null)
       {
-        log.error("Cannot find XSD schema ''{0}''. Disabling validation...", xsdPath);
+        log.error("Cannot find XSD schema ''{0}''. Disabling validation...", CONTROLLER_XSD_PATH);
       }
 
       else
@@ -600,7 +614,19 @@ public class Version20ModelBuilder extends AbstractModelBuilder
         xsdPath = xsdResource.getPath();
 
         builder.setProperty(JAXP_SCHEMA_LANGUAGE, W3C_XML_SCHEMA);
-        builder.setProperty(JAXP_SCHEMA_SOURCE, new File(xsdPath));
+
+        // JAXP_SCHEMA_SOURCE property allows values in following types:
+        //
+        //  - A string that points to the URI of the schema
+        //  - An InputStream with the contents of the schema
+        //  - A SAX InputSource
+        //  - A File 
+        //  - An array of Objects, each of which is one of the types defined here (e.g. an
+        //    array of strings when multiple schema locations are required).
+        //
+        //  Above as per the JAXP specification: Properties for Enabling Schema Validation
+
+        builder.setProperty(JAXP_SCHEMA_SOURCE, xsdPath);
 
         builder.setValidation(true);
       }
